fixing alignment for center col layout

--- a/app/frontend/scss/_utilities.scss
+++ b/app/frontend/scss/_utilities.scss
@@ -35,6 +35,7 @@
 		.col-center {
 			justify-self: center;
 			margin-inline: auto;
+			width: 100%;
 		}
 		/* Center presets (optional helpers) */
 		.col-6.col-center {
